--- a/app/src/main/res/layout/activity_mupdf.xml
+++ b/app/src/main/res/layout/activity_mupdf.xml
@@ -8,9 +8,7 @@
     <com.artifex.mupdfdemo.MuPDFReaderView
         android:id="@+id/mu_pdf_mupdfreaderview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
-    <include
-        layout="@layout/pdf_tools"/>
+    <include layout="@layout/pdf_tools" />
 </RelativeLayout>
